<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Pagina.perfil.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_nombre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre" />

        <EditText
            android:id="@+id/txt_nombre3"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textview_apellidos2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtApellidos" />

        <EditText
            android:id="@+id/txt_apellidos2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textview_correo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCorreo" />

        <EditText
            android:id="@+id/txt_correo2"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textview_numero2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNMovil" />

        <EditText
            android:id="@+id/txt_numero2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textview_prefcompra2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPrefCompra" />

        <Spinner
            android:id="@+id/pref_spinner2"
            android:layout_width="178dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_nzapatillas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNZapatillas" />

        <Spinner
            android:id="@+id/nzapatillas_spinner2"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:dropDownHeight="160dp" />

        <TextView
            android:id="@+id/txtIdioma2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/btn_envio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="Información de envío"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="Button" />

    </LinearLayout>

</FrameLayout>