<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="187dp"
            android:layout_height="175dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="52dp"
            app:srcCompat="@mipmap/logo_foreground" />

        <TextView
            android:id="@+id/txt_bienvenida"
            android:layout_width="211dp"
            android:layout_height="31dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/txt_email_inicio_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/hint_introduce_email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_contrasena_inicio_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/hint_introduce_contraseña"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Iniciar sesión" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrarse" />

        <Button
            android:id="@+id/btn_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="24dp"
            android:onClick="admin"
            android:text="admin" />

        <Button
            android:id="@+id/btn_tienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="28dp"
            android:onClick="irTienda"
            android:text="@string/txt_tienda" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>